[project]
name = "mangum-ws"
version = "0.1.2"
description = "WebSocket support for Mangum (AWS API Gateway WebSocket API → FastAPI)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Igor Okulist", email = "okigan@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
keywords = ["mangum", "websocket", "fastapi", "aws", "lambda", "api-gateway"]

dependencies = [
    "mangum>=0.17.0",
    "fastapi>=0.100.0",
]

[project.optional-dependencies]
aws = ["boto3>=1.26.0"]

[project.urls]
Homepage = "https://github.com/okigan/mangum-ws"
Repository = "https://github.com/okigan/mangum-ws"
Issues = "https://github.com/okigan/mangum-ws/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "uvicorn[standard]>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["mangum_ws"]
